@@ -70,8 +70,9 @@ class ConfigFile(ConfigParser.ConfigParser):
     ConfigParser.ConfigParser.__init__(self)
     # Renders options case-sensitive
     ConfigParser.ConfigParser.optionxform = self.optionxform
-    self.__conffile = encode(conffile)
-    if create and not os.path.exists(self.__conffile):
+    # conffile is a unicode string - make sure to encode() when appropriate
+    self.__conffile = conffile
+    if create and not os.path.exists(encode(self.__conffile)):
       fh = open(self.__conffile, 'w')
       fh.close()
     self.read()
